--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,4 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 django-cors-headers==3.11.0
 django-debug-toolbar==3.2.4
+djangochannelsrestframework==0.3.0
